compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__subject_int_float_guard_tuple.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "type X { X(a: Int, b: Float) }\nfn x() { case X(1, 2.0) { x if x == X(2.0, 1) -> 1 _ -> 2 } }"
---
----- SOURCE CODE
type X { X(a: Int, b: Float) }
fn x() { case X(1, 2.0) { x if x == X(2.0, 1) -> 1 _ -> 2 } }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:2:39
  │
2 │ fn x() { case X(1, 2.0) { x if x == X(2.0, 1) -> 1 _ -> 2 } }
  │                                       ^^^

Expected type:

    Int

Found type:

    Float

error: Type mismatch
  ┌─ /src/one/two.gleam:2:44
  │
2 │ fn x() { case X(1, 2.0) { x if x == X(2.0, 1) -> 1 _ -> 2 } }
  │                                            ^

Expected type:

    Float

Found type:

    Int
